# Russian-Stress-Accent-Predictor

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  accentor.py  model.py  prepare_data.py  pyproject.toml  requirements.txt  setup.py  test.py
data/: train.csv  val.csv  vocab.json
examples/: basic_usage.py  batch_processing.py
model/: acc_model.pt
ruaccent/: __init__.py  accentor.py  cli.py
ruaccent/model/: README.md
train_scripts/: Readme.md  train_model.py
